--- a/Deck Title.html
+++ b/Deck Title.html
@@ -52,7 +52,7 @@
 }
 </style>
 
-<script async="" src="./Deck Title_files/analytics.js"></script><script type="text/javascript" src="./Deck Title_files/dataset-shim.js"></script>
+<script async="" src="./Deck Title_files/analytics.js"></script><script type="text/javascript" src="./Deck Title_files/dataset-shim.js"></script><style type="text/css"></style>
 <script type="text/javascript" src="./Deck Title_files/impress.js"></script>
 
 <script src="./Deck Title_files/onready.js"></script>
@@ -82,7 +82,7 @@ ready(function() {
     ga('create', 'UA-42322531-1', 'strut.io');
     ga('send', 'pageview');
     </script>
-<style type="text/css"></style></head>
+</head>
 <body class="impress-supported impress-enabled" style="height: 100%; overflow: hidden;">
 <style type="text/css">
 /*.example {
@@ -104,6 +104,26 @@ ready(function() {
 <style>
 
 
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
 
 	
 		
@@ -335,7 +355,7 @@ transform: scale(1.15, 1.15)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-4 bg-custom-799ecd " data-x="1911.4666666666667" data-y="4300.8" data-scale="3" id="step-5" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-4 bg-custom-799ecd " data-x="17203.2" data-y="1536" data-scale="3" id="step-5" style="position: absolute; transform: translate(-50%, -50%) translate3d(17203.2px, 1536px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-4" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -364,7 +384,7 @@ transform: scale(0.54, 0.54)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-5 bg-custom-799ecd " data-x="5734.4" data-y="4300.8" data-scale="3" id="step-6" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-5 bg-custom-799ecd " data-x="1911.4666666666667" data-y="4300.8" data-scale="3" id="step-6" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-5" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -413,7 +433,7 @@ transform: scale(0.84, 0.84)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-6 bg-custom-799ecd " data-x="9557.333333333334" data-y="4300.8" data-scale="3" id="step-7" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-6 bg-custom-799ecd " data-x="5734.4" data-y="4300.8" data-scale="3" id="step-7" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-6" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -480,7 +500,7 @@ transform: scale(1.62, 1.62)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-7 bg-custom-799ecd " data-x="13380.266666666666" data-y="4300.8" data-scale="3" id="step-8" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-7 bg-custom-799ecd " data-x="9557.333333333334" data-y="4300.8" data-scale="3" id="step-8" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-7" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -531,7 +551,7 @@ transform: scale(1, 1)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-8 bg-custom-799ecd " data-x="1911.4666666666667" data-y="7065.6" data-scale="3" id="step-9" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-8 bg-custom-799ecd " data-x="13380.266666666666" data-y="4300.8" data-scale="3" id="step-9" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-8" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -582,13 +602,13 @@ transform: scale(1, 1)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-9 bg-custom-799ecd " data-x="5734.4" data-y="7065.6" data-scale="3" id="step-10" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-9 bg-custom-799ecd " data-x="17203.2" data-y="4300.8" data-scale="3" id="step-10" style="position: absolute; transform: translate(-50%, -50%) translate3d(17203.2px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-9" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
 			
-			<div class="componentContainer " style="top: 14px; left: 37px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer " style="top: 14px; left: 38.35px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
@@ -616,7 +636,7 @@ transform: scale(1, 1)">
 <i><font face="Lato">"The Oculus Rift requires the scene to be rendered in <b>split-screen stereo</b> <br>with half the screen used for each
 </font>eye. When using the Rift, the left eye <br>sees the left half of the screen, and the right eye sees the right half.
 <br>Although varying from person-to-person, human eye pupils are <br>approximately 65 mm apart. This is known
-as <b>interpupillary distance</b> <br>(IPD). The in-application cameras should be configured with the same <br>separation..."<br>"This means that your application will need to <b>render the
+as <b>interpupillary distance</b> <br>(IPD). The in-application cameras should be configured with the same <br>separation..."<br>"...This means that your application will need to <b>render the
 &nbsp;entire scene <br>twice</b>, once with the left virtual camera, and once with the right."</i><br>
 </div>
 </div>
@@ -653,7 +673,7 @@ transform: scale(0.41, 0.41)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-10 bg-custom-799ecd " data-x="9557.333333333334" data-y="7065.6" data-scale="3" id="step-11" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-10 bg-custom-799ecd " data-x="1911.4666666666667" data-y="7065.6" data-scale="3" id="step-11" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-10" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -689,7 +709,157 @@ transform: scale(1.77, 1.77)">
 		
 		</div>
 	
-	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="7645.866666666667" data-y="4300.8" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(7645.86666666667px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
+		
+			<div class="step future" data-state="strut-slide-11 bg-custom-799ecd " data-x="5734.4" data-y="7065.6" data-scale="3" id="step-12" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-11" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 20px; left: 563px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 420px; height: 196.88px;">
+<div class="transformContainer" style="-webkit-transform: scale(1.31, 1.31);
+-moz-transform: scale(1.31, 1.31);
+transform: scale(1.31, 1.31)">
+<img src="./Deck Title_files/0Tol1kL.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 18px; left: 15px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">As mentioned before, you need&nbsp;<b>two <br>cameras</b> because you have&nbsp;to render <br>two slightly different&nbsp;scenes every <br>frame.<br>These two cameras are <b>shifted<br>sideways</b>, but&nbsp;the <b>projection axes</b> <br>should be <b>parallel</b> to each other and <br>point in the same direction.<br>The optimal distance between the <br>two cameras depends on the&nbsp;person <br>which is wearing the HMD.<br>In fact, the Oculus Configuration<br>Utility allows to define user profiles<br>with personalized settings and tests<br>to determine the optimal IPD.<br></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 236px; left: 589px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<img src="./Deck Title_files/OXWRhnr.png">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-12 bg-custom-799ecd " data-x="9557.333333333334" data-y="7065.6" data-scale="3" id="step-13" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-12" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 106px; left: 18px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">Head Tracking is achieved through the use of sensors, including<br>gyroscopes, accelerometers and magnetometers. The collective<br>information from all the sensors on the Oculus Rift is combined&nbsp;<br>through a process known as <b>sensor fusion.<br></b>With DK2 (at the time of writing &nbsp;this is the most recent version)<br>Oculus Rift is able to track <b>head orientation</b> and <b>head position</b>.<br><br>Head position is maintained as a unit<br>quaternion or eventually in<br>yaw-pitch-roll form.<br><br></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 13px; left: 17px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Head tracking</font><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 372px; left: 580px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 382px; height: 369.27px;">
+<div class="transformContainer" style="-webkit-transform: scale(1.16, 1.16);
+-moz-transform: scale(1.16, 1.16);
+transform: scale(1.16, 1.16)">
+<img src="./Deck Title_files/1y2KYln.png">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-13 bg-custom-799ecd " data-x="13380.266666666666" data-y="7065.6" data-scale="3" id="step-14" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-13" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 33px; left: 30px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 325px; height: 289.58px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.32, 0.32);
+-moz-transform: scale(0.32, 0.32);
+transform: scale(0.32, 0.32)">
+<img src="./Deck Title_files/sQ1TPMd.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 13px; left: 374px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">Head position tracking is achieved through&nbsp;<br>a standard USB webcam with a infrared<br>filter that picks up the blinking frequencies<br>of the LEDs mounted all over the headset.<br>Each of these LEDs blinks at different<br>frequences so the software can distinguish<br>them from each other and calculate head<br>position.<br></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer" style="top: 367px; left: 569px; width: 425px; height: 344px;">
+<div class="transformContainer" style="-webkit-transform: scale(, );
+-moz-transform: scale(, );
+transform: scale(, )">
+<object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/kZug9sdXwMk&amp;hl=en&amp;fs=1"><param name="allowFullScreen" value="true"><embed src="http://www.youtube.com/v/kZug9sdXwMk&amp;hl=en&amp;fs=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="344"></object>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 386px; left: 25px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 514px; height: 326.76px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.73, 0.73);
+-moz-transform: scale(0.73, 0.73);
+transform: scale(0.73, 0.73)">
+<img src="./Deck Title_files/QF9nuh1.jpg">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-14 bg-custom-799ecd " data-x="17203.2" data-y="7065.6" data-scale="3" id="step-15" style="position: absolute; transform: translate(-50%, -50%) translate3d(17203.2px, 7065.6px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-14" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 28px; left: 464px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 528px; height: 440px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.88, 0.88);
+-moz-transform: scale(0.88, 0.88);
+transform: scale(0.88, 0.88)">
+<img src="./Deck Title_files/VemqBfj.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 21px; left: 23px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">The OculusSDK provides&nbsp;<br>parameters such as the<br>distance of the <b>frustum </b>faces<br>from the camera to allow<br>the programmer to have a<br>visual representation of the<br>tracking frustum if needed.<br><br>On the image are shown the<br>default origin and yaw<br>orientation of the camera,<br>but these parameters can be changed at run-time to match the<br>current ones of the user.<br><br>Position tracking may stop working when: the headset exits the<br>frustum volume, the headset faces away from the camera, the<br>headset is occluded in some way or the headset moves too fast.<br></font>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="9557.333333333334" data-y="4300.8" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
 	
 </div></div>
 <div class="hint">
