Added new slides

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- saved from url=(0058)http://strut.io/editor/preview_export/impress.html#/step-1 -->
+<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-19 -->
 <html style="height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -52,7 +52,7 @@
 }
 </style>
 
-<script async="" src="./Deck Title_files/analytics.js"></script><script type="text/javascript" src="./Deck Title_files/dataset-shim.js"></script><style type="text/css"></style>
+<script async="" src="./Deck Title_files/analytics.js"></script><script type="text/javascript" src="./Deck Title_files/dataset-shim.js"></script>
 <script type="text/javascript" src="./Deck Title_files/impress.js"></script>
 
 <script src="./Deck Title_files/onready.js"></script>
@@ -82,7 +82,7 @@ ready(function() {
     ga('create', 'UA-42322531-1', 'strut.io');
     ga('send', 'pageview');
     </script>
-</head>
+<style type="text/css"></style></head>
 <body class="impress-supported impress-enabled" style="height: 100%; overflow: hidden;">
 <style type="text/css">
 /*.example {
@@ -104,6 +104,26 @@ ready(function() {
 <style>
 
 
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
 
 	
 		
@@ -203,11 +223,11 @@ ready(function() {
 </div>
 
 <div class="bg bg-custom-799ecd strut-surface">
-<div class="bg innerBg strut-slide-0 bg-custom-799ecd">
-<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; -webkit-transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3846.41068447412px) scale(0.259982638888889);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; -webkit-transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-1911.46666666667px, -1536px, 0px);">
+<div class="bg innerBg strut-slide-18 bg-custom-799ecd">
+<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; -webkit-transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3846.41068447412px) scale(0.259982638888889);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; -webkit-transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-13380.2666666667px, -9830.4px, 0px);">
 	
 		
-			<div class="step present active" data-state="strut-slide-0 bg-custom-799ecd " data-x="1911.4666666666667" data-y="1536" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 1536px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-0 bg-custom-799ecd " data-x="1911.4666666666667" data-y="1536" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 1536px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-0" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
@@ -309,7 +329,7 @@ transform: scale(1, 1)">
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 86px;" class="antialias">
-<font face="League Gothic, sans-serif">A quick overview on&nbsp;Volume Rendering</font>
+<font face="League Gothic, sans-serif">A quick overview of Volume Rendering</font>
 </div>
 </div>
 </div>
@@ -810,7 +830,7 @@ transform: scale(1, 1)">
 </div>
 </div>
 			
-			<div class="componentContainer" style="top: 367px; left: 569px; width: 425px; height: 344px;">
+			<div class="componentContainer" style="top: 366px; left: 569px; width: 425px; height: 344px;">
 <div class="transformContainer" style="-webkit-transform: scale(, );
 -moz-transform: scale(, );
 transform: scale(, )">
@@ -859,7 +879,201 @@ transform: scale(1, 1)">
 		
 		</div>
 	
-	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="9557.333333333334" data-y="4300.8" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 4300.8px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
+		
+			<div class="step future" data-state="strut-slide-15 bg-custom-799ecd " data-x="1911.4666666666667" data-y="9830.4" data-scale="3" id="step-16" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-15" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 16px; left: 18px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Smart Volume</font><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 107px; left: 40px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">This class will:<br><ul><li><span style="line-height: normal;">Read command line parameters (sent from the Main class)</span></li><li><span style="line-height: normal;">Set up a graphic context (a window with its interactor)</span></li><li><span style="line-height: normal;">Load from disk the specified 3D dataset</span></li><li><span style="line-height: normal;">Associate the specified transfer function</span></li><li><span style="line-height: normal;">Eventual options such as a bounding box around the dataset</span></li><li><span style="line-height: normal;">This class also specifies keyboard events such as changing blending<br>mode (which is, the transfer function+eventual shaders or effects)</span></li></ul></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 435px; left: 577px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 327px; height: 327px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.55, 0.55);
+-moz-transform: scale(0.55, 0.55);
+transform: scale(0.55, 0.55)">
+<img src="./Deck Title_files/qaUSzwD.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 456px; left: 47px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato"><b><i>Blending Modes</i></b>:</font><br><ul><li><span style="line-height: normal;"><b>MIP</b><br>Color is white, opacity is linear<br>from lower to upper bound of a<br>opacity window which can be set<br>in the command line arguments.</span></li></ul>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-16 bg-custom-799ecd " data-x="5734.4" data-y="9830.4" data-scale="3" id="step-17" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-16" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 0px; left: 60px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<br><ul><li><span style="line-height: normal;"><b>CompositeShadeRamp</b><br>Like MIP, but color scales linearly<br>from black to white. Also some<br>shading is applied to get a nicer<br>result</span></li></ul>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 20px; left: 600px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 327px; height: 330.99px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.57, 0.57);
+-moz-transform: scale(0.57, 0.57);
+transform: scale(0.57, 0.57)">
+<img src="./Deck Title_files/8vYdQ5H.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 380px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<br><ul><li><span style="line-height: normal;"><b>CT_skin</b><br>A more complicated piecewise<br>function is used to determine<br>color and opacity. The resulting<br>image is very useful to highlight<br>skin in CT datasets.</span></li></ul>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 420px; left: 600px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 325px; height: 323.35px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.55, 0.55);
+-moz-transform: scale(0.55, 0.55);
+transform: scale(0.55, 0.55)">
+<img src="./Deck Title_files/7rsyeMV.png">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-17 bg-custom-799ecd " data-x="9557.333333333334" data-y="9830.4" data-scale="3" id="step-18" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-17" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 20px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+
+<br><ul><li><span style="line-height: normal;"><b>CT_bone</b><br></span>A more complicated piecewise 
+<br><span style="line-height: 1em;">function is used to determine &nbsp;<br></span><span style="line-height: 1em;">color and opacity. The resulting &nbsp;<br></span><span style="line-height: 1em;">image is very useful to highlight &nbsp;<br></span><span style="line-height: 1em;">bones in CT datasets.</span></li></ul><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 380px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<br><ul><li><span style="line-height: normal;"><b>CT_muscle</b><br>A more complicated piecewise<br>function is used to determine<br>color and opacity. The resulting<br>image is very useful to highlight<br>muscle in CT datasets.</span></li></ul>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 20px; left: 600px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 330px; height: 330px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.56, 0.56);
+-moz-transform: scale(0.56, 0.56);
+transform: scale(0.56, 0.56)">
+<img src="./Deck Title_files/NEVV3Vn.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 400px; left: 600px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 333px; height: 334.16px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.58, 0.58);
+-moz-transform: scale(0.58, 0.58);
+transform: scale(0.58, 0.58)">
+<img src="./Deck Title_files/sFH6bBF.png">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step present active" data-state="strut-slide-18 bg-custom-799ecd " data-x="13380.266666666666" data-y="9830.4" data-scale="3" id="step-19" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-18" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: -8px; left: 43px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">StereoDistortPass</font><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 68px; left: 47px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">This class is executed at every render cycle and will:<br><ul><li>Create all the FBOs and Texture Objects if not already did<br></li><li>Render left eye on a texture using the render delegate<br></li><li>Move the camera perpendicularly from the viewing<br>direction by the IPD distance and render right eye on another<br>texture<br></li><li>Apply a fragment shader which takes the two textures as uniform,<br>apply a barrel distortion and put them side by side.</li></ul></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 404px; left: 34px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 542px; height: 358.01px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.66, 0.66);
+-moz-transform: scale(0.66, 0.66);
+transform: scale(0.66, 0.66)">
+<img src="./Deck Title_files/A4PkWkN.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 534px; left: 595px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">The result of this class<br>without distortion...<br>The IPD is pretty evident<br></font>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="9557.333333333334" data-y="5683.2" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 5683.2px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
 	
 </div></div>
 <div class="hint">
